--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0"/>
 	<title>JS Clock</title>
 	<link href="clock.css" rel="stylesheet"/>
 	<link href="favicon.ico" rel="icon" type="image/x-icon">
