--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0"/>
+	<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 	<title>JS Clock</title>
 	<link href="clock.css" rel="stylesheet"/>
-	<link href="favicon.ico" rel="icon" type="image/x-icon">
+	<link href="favicon.ico" rel="icon" type="image/x-icon"/>
 	<link href="manifest.json"  rel="manifest"/>
 </head>
 <body>
