--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 	<link href="manifest.json"  rel="manifest"/>
 </head>
 <body>
-	<div id="time"></div>
+	<div id="display">
+		<div id="date"></div>
+		<div id="time"></div>
+	</div>
 	<script src="clock.js"></script>
 </body>
 </html>
