--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>JS Clock</title>
 	<link href="clock.css" rel="stylesheet"/>
 	<link href="favicon.ico" rel="icon" type="image/x-icon"/>
-	<link href="manifest.json"  rel="manifest"/>
+	<!-- <link href="manifest.json"  rel="manifest"/> -->
 </head>
 <body>
 	<div id="display">
